--- a/Spring boot/BlogPessoal/scr/test/resoucers/application.properties
+++ b/Spring boot/BlogPessoal/scr/test/resoucers/application.properties
@@ -1,6 +1,3 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog_pessoal_test?createDatabaseIfNotExist=true
-createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
